--- a/img/Src/PantallaMR.fx.yaml
+++ b/img/Src/PantallaMR.fx.yaml
@@ -1,4 +1,4 @@
-"Screen1 As screen.'phoneLayout_HeaderAndGallery_ver3.0'":
+"PantallaMR As screen.'phoneLayout_HeaderAndGallery_ver3.0'":
 
     RectQuickActionBar1 As rectangle:
         Height: =88
@@ -94,7 +94,7 @@
     "BrowseGallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
         Height: =Parent.Height - Self.Y
-        Items: =SortByColumns(Search(CustomGallerySample, TextSearchBox1.Text, "SampleText"), "SampleText", If(SortDescending1, SortOrder.Descending, SortOrder.Ascending))
+        Items: ='Science World'
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         ShowScrollbar: =false
@@ -106,6 +106,7 @@
 
         Image7 As image:
             Height: =72
+            Image: =ThisItem.Imagen
             OnSelect: =Select(Parent)
             RadiusBottomLeft: =8
             RadiusBottomRight: =8
@@ -124,7 +125,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.SampleHeading
+            Text: =ThisItem.Título
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 173
             X: =103
@@ -139,28 +140,12 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.SampleText
+            Text: =ThisItem.'Nombre (Temas_x0020_Unidad)'
             VerticalAlign: =VerticalAlign.Top
             Width: =Title1.Width
             X: =Title1.X
             Y: =Title1.Y + Title1.Height
             ZIndex: =3
-
-        NextArrow1 As icon.ChevronRight:
-            AccessibleLabel: =Self.Tooltip
-            Color: =RGBA(166, 166, 166, 1)
-            Height: =50
-            Icon: =Icon.ChevronRight
-            OnSelect: =Select(Parent)
-            PaddingBottom: =16
-            PaddingLeft: =16
-            PaddingRight: =16
-            PaddingTop: =16
-            Tooltip: ="Ver los detalles del elemento"
-            Width: =50
-            X: =Parent.TemplateWidth - Self.Width - 12
-            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =4
 
         Separator1 As rectangle:
             Height: =8
@@ -175,4 +160,28 @@
             Visible: =ThisItem.IsSelected
             Width: =4
             ZIndex: =6
+
+        "ViewInMR3 As 'Ver en MR (versión preliminar)'.pcfdataset":
+            BorderFillColor: =RGBA(47, 81, 151, 1)
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledContentColor: =RGBA(166, 166, 166, 1)
+            DisabledFillColor: =RGBA(244, 244, 244, 1)
+            DisplayMode: =DisplayMode.Edit
+            FillColor: =RGBA(56, 96, 178, 1)
+            Height: =51
+            HoverBorderColor: =RGBA(88, 115, 171, 1)
+            HoverContentColor: =RGBA(255, 255, 255, 1)
+            HoverFillColor: =RGBA(47, 81, 151, 1)
+            OnMixedRealitySelect: =false
+            OnSelect: =Select(Parent)
+            PressedBorderColor: =RGBA(56, 96, 178, 1)
+            PressedContentColor: =RGBA(56, 96, 178, 1)
+            PressedFillColor: =RGBA(255, 255, 255, 1)
+            Source: =ThisItem.'3D'
+            Text: ="MR"
+            TextColor: =RGBA(255, 255, 255, 1)
+            Width: =122
+            X: =470
+            Y: =38
+            ZIndex: =7
 
