--- a/img/CanvasManifest.json
+++ b/img/CanvasManifest.json
@@ -28,7 +28,7 @@
       "datatablev2control": true,
       "dataverseactionsenabled": true,
       "delaycontrolrendering": true,
-      "delayloadscreens": true,
+      "delayloadscreens": false,
       "disablecdsfileandlargeimage": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
@@ -111,16 +111,16 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "b0cf4e47-e061-4bc0-a2b5-1cbab89f3a28",
-    "Id": "b0cf4e47-e061-4bc0-a2b5-1cbab89f3a28",
+    "Id": "323d4422-726e-4e99-824b-3cf839810b7f",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "App18",
+    "Name": "App18enero",
     "OriginatingVersion": "1.336",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "App17",
+    "AppName": "App18enero",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
