--- a/img/CanvasManifest.json
+++ b/img/CanvasManifest.json
@@ -120,7 +120,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "App17",
+    "AppName": "App18enero",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
